includes/fcore_has/fs_parser/fs_grammarParser.cpp

// Generated from /home/fils/git/fCore_has/src/frontend/fs_grammar.g4 by ANTLR 4.8


#include "fs_grammarListener.h"
#include "fs_grammarVisitor.h"

#include "fs_grammarParser.h"


using namespace antlrcpp;
using namespace fs_parser;
using namespace antlr4;

fs_grammarParser::fs_grammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

fs_grammarParser::~fs_grammarParser() {
  delete _interpreter;
}

std::string fs_grammarParser::getGrammarFileName() const {
  return "fs_grammar.g4";
}

const std::vector<std::string>& fs_grammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& fs_grammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

fs_grammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::CodeContext* fs_grammarParser::ProgramContext::code() {
  return getRuleContext<fs_grammarParser::CodeContext>(0);
}


size_t fs_grammarParser::ProgramContext::getRuleIndex() const {
  return fs_grammarParser::RuleProgram;
}

void fs_grammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void fs_grammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any fs_grammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::ProgramContext* fs_grammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, fs_grammarParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    code();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeContext ------------------------------------------------------------------

fs_grammarParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fs_grammarParser::InstructionContext *> fs_grammarParser::CodeContext::instruction() {
  return getRuleContexts<fs_grammarParser::InstructionContext>();
}

fs_grammarParser::InstructionContext* fs_grammarParser::CodeContext::instruction(size_t i) {
  return getRuleContext<fs_grammarParser::InstructionContext>(i);
}

std::vector<fs_grammarParser::For_blockContext *> fs_grammarParser::CodeContext::for_block() {
  return getRuleContexts<fs_grammarParser::For_blockContext>();
}

fs_grammarParser::For_blockContext* fs_grammarParser::CodeContext::for_block(size_t i) {
  return getRuleContext<fs_grammarParser::For_blockContext>(i);
}

std::vector<fs_grammarParser::PragmaContext *> fs_grammarParser::CodeContext::pragma() {
  return getRuleContexts<fs_grammarParser::PragmaContext>();
}

fs_grammarParser::PragmaContext* fs_grammarParser::CodeContext::pragma(size_t i) {
  return getRuleContext<fs_grammarParser::PragmaContext>(i);
}

std::vector<fs_grammarParser::DeclarationContext *> fs_grammarParser::CodeContext::declaration() {
  return getRuleContexts<fs_grammarParser::DeclarationContext>();
}

fs_grammarParser::DeclarationContext* fs_grammarParser::CodeContext::declaration(size_t i) {
  return getRuleContext<fs_grammarParser::DeclarationContext>(i);
}


size_t fs_grammarParser::CodeContext::getRuleIndex() const {
  return fs_grammarParser::RuleCode;
}

void fs_grammarParser::CodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode(this);
}

void fs_grammarParser::CodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode(this);
}


antlrcpp::Any fs_grammarParser::CodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitCode(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::CodeContext* fs_grammarParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 2, fs_grammarParser::RuleCode);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(68);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case fs_grammarParser::T__1:
        case fs_grammarParser::T__2:
        case fs_grammarParser::T__3:
        case fs_grammarParser::T__4:
        case fs_grammarParser::T__5:
        case fs_grammarParser::T__6:
        case fs_grammarParser::T__7:
        case fs_grammarParser::T__8:
        case fs_grammarParser::T__9:
        case fs_grammarParser::T__10:
        case fs_grammarParser::T__11:
        case fs_grammarParser::T__12:
        case fs_grammarParser::T__13:
        case fs_grammarParser::T__14:
        case fs_grammarParser::T__15:
        case fs_grammarParser::T__16:
        case fs_grammarParser::T__17: {
          setState(64);
          instruction();
          break;
        }

        case fs_grammarParser::T__18: {
          setState(65);
          for_block();
          break;
        }

        case fs_grammarParser::T__30: {
          setState(66);
          pragma();
          break;
        }

        case fs_grammarParser::T__31:
        case fs_grammarParser::T__32:
        case fs_grammarParser::T__33:
        case fs_grammarParser::T__34: {
          setState(67);
          declaration();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fs_grammarParser::T__1)
      | (1ULL << fs_grammarParser::T__2)
      | (1ULL << fs_grammarParser::T__3)
      | (1ULL << fs_grammarParser::T__4)
      | (1ULL << fs_grammarParser::T__5)
      | (1ULL << fs_grammarParser::T__6)
      | (1ULL << fs_grammarParser::T__7)
      | (1ULL << fs_grammarParser::T__8)
      | (1ULL << fs_grammarParser::T__9)
      | (1ULL << fs_grammarParser::T__10)
      | (1ULL << fs_grammarParser::T__11)
      | (1ULL << fs_grammarParser::T__12)
      | (1ULL << fs_grammarParser::T__13)
      | (1ULL << fs_grammarParser::T__14)
      | (1ULL << fs_grammarParser::T__15)
      | (1ULL << fs_grammarParser::T__16)
      | (1ULL << fs_grammarParser::T__17)
      | (1ULL << fs_grammarParser::T__18)
      | (1ULL << fs_grammarParser::T__30)
      | (1ULL << fs_grammarParser::T__31)
      | (1ULL << fs_grammarParser::T__32)
      | (1ULL << fs_grammarParser::T__33)
      | (1ULL << fs_grammarParser::T__34))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

fs_grammarParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Input_declContext* fs_grammarParser::DeclarationContext::input_decl() {
  return getRuleContext<fs_grammarParser::Input_declContext>(0);
}

fs_grammarParser::Variable_declContext* fs_grammarParser::DeclarationContext::variable_decl() {
  return getRuleContext<fs_grammarParser::Variable_declContext>(0);
}

fs_grammarParser::Constant_declContext* fs_grammarParser::DeclarationContext::constant_decl() {
  return getRuleContext<fs_grammarParser::Constant_declContext>(0);
}

fs_grammarParser::Output_declContext* fs_grammarParser::DeclarationContext::output_decl() {
  return getRuleContext<fs_grammarParser::Output_declContext>(0);
}


size_t fs_grammarParser::DeclarationContext::getRuleIndex() const {
  return fs_grammarParser::RuleDeclaration;
}

void fs_grammarParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void fs_grammarParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


antlrcpp::Any fs_grammarParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::DeclarationContext* fs_grammarParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, fs_grammarParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fs_grammarParser::T__33: {
        setState(72);
        input_decl();
        break;
      }

      case fs_grammarParser::T__31: {
        setState(73);
        variable_decl();
        break;
      }

      case fs_grammarParser::T__32: {
        setState(74);
        constant_decl();
        break;
      }

      case fs_grammarParser::T__34: {
        setState(75);
        output_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

fs_grammarParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Reg_instrContext* fs_grammarParser::InstructionContext::reg_instr() {
  return getRuleContext<fs_grammarParser::Reg_instrContext>(0);
}

fs_grammarParser::Imm_instrContext* fs_grammarParser::InstructionContext::imm_instr() {
  return getRuleContext<fs_grammarParser::Imm_instrContext>(0);
}

fs_grammarParser::Indep_instrContext* fs_grammarParser::InstructionContext::indep_instr() {
  return getRuleContext<fs_grammarParser::Indep_instrContext>(0);
}

fs_grammarParser::Pseudo_instrContext* fs_grammarParser::InstructionContext::pseudo_instr() {
  return getRuleContext<fs_grammarParser::Pseudo_instrContext>(0);
}

fs_grammarParser::Branch_instrContext* fs_grammarParser::InstructionContext::branch_instr() {
  return getRuleContext<fs_grammarParser::Branch_instrContext>(0);
}

fs_grammarParser::Conv_instrContext* fs_grammarParser::InstructionContext::conv_instr() {
  return getRuleContext<fs_grammarParser::Conv_instrContext>(0);
}

fs_grammarParser::Load_instrContext* fs_grammarParser::InstructionContext::load_instr() {
  return getRuleContext<fs_grammarParser::Load_instrContext>(0);
}


size_t fs_grammarParser::InstructionContext::getRuleIndex() const {
  return fs_grammarParser::RuleInstruction;
}

void fs_grammarParser::InstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstruction(this);
}

void fs_grammarParser::InstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstruction(this);
}


antlrcpp::Any fs_grammarParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::InstructionContext* fs_grammarParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, fs_grammarParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fs_grammarParser::T__4:
      case fs_grammarParser::T__5:
      case fs_grammarParser::T__6:
      case fs_grammarParser::T__7:
      case fs_grammarParser::T__8: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        reg_instr();
        break;
      }

      case fs_grammarParser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        imm_instr();
        break;
      }

      case fs_grammarParser::T__2:
      case fs_grammarParser::T__3: {
        enterOuterAlt(_localctx, 3);
        setState(80);
        indep_instr();
        break;
      }

      case fs_grammarParser::T__17: {
        enterOuterAlt(_localctx, 4);
        setState(81);
        pseudo_instr();
        break;
      }

      case fs_grammarParser::T__13:
      case fs_grammarParser::T__14:
      case fs_grammarParser::T__15:
      case fs_grammarParser::T__16: {
        enterOuterAlt(_localctx, 5);
        setState(82);
        branch_instr();
        break;
      }

      case fs_grammarParser::T__9:
      case fs_grammarParser::T__10:
      case fs_grammarParser::T__11: {
        enterOuterAlt(_localctx, 6);
        setState(83);
        conv_instr();
        break;
      }

      case fs_grammarParser::T__1: {
        enterOuterAlt(_localctx, 7);
        setState(84);
        load_instr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Reg_instrContext ------------------------------------------------------------------

fs_grammarParser::Reg_instrContext::Reg_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Reg_opcodeContext* fs_grammarParser::Reg_instrContext::reg_opcode() {
  return getRuleContext<fs_grammarParser::Reg_opcodeContext>(0);
}

std::vector<fs_grammarParser::OperandContext *> fs_grammarParser::Reg_instrContext::operand() {
  return getRuleContexts<fs_grammarParser::OperandContext>();
}

fs_grammarParser::OperandContext* fs_grammarParser::Reg_instrContext::operand(size_t i) {
  return getRuleContext<fs_grammarParser::OperandContext>(i);
}

fs_grammarParser::DestinationContext* fs_grammarParser::Reg_instrContext::destination() {
  return getRuleContext<fs_grammarParser::DestinationContext>(0);
}


size_t fs_grammarParser::Reg_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleReg_instr;
}

void fs_grammarParser::Reg_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReg_instr(this);
}

void fs_grammarParser::Reg_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReg_instr(this);
}


antlrcpp::Any fs_grammarParser::Reg_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitReg_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Reg_instrContext* fs_grammarParser::reg_instr() {
  Reg_instrContext *_localctx = _tracker.createInstance<Reg_instrContext>(_ctx, getState());
  enterRule(_localctx, 8, fs_grammarParser::RuleReg_instr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    reg_opcode();
    setState(88);
    operand();
    setState(89);
    match(fs_grammarParser::T__0);
    setState(90);
    operand();
    setState(91);
    match(fs_grammarParser::T__0);
    setState(92);
    destination();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Imm_instrContext ------------------------------------------------------------------

fs_grammarParser::Imm_instrContext::Imm_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Imm_opcodeContext* fs_grammarParser::Imm_instrContext::imm_opcode() {
  return getRuleContext<fs_grammarParser::Imm_opcodeContext>(0);
}

fs_grammarParser::DestinationContext* fs_grammarParser::Imm_instrContext::destination() {
  return getRuleContext<fs_grammarParser::DestinationContext>(0);
}

fs_grammarParser::ImmediateContext* fs_grammarParser::Imm_instrContext::immediate() {
  return getRuleContext<fs_grammarParser::ImmediateContext>(0);
}


size_t fs_grammarParser::Imm_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleImm_instr;
}

void fs_grammarParser::Imm_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImm_instr(this);
}

void fs_grammarParser::Imm_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImm_instr(this);
}


antlrcpp::Any fs_grammarParser::Imm_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitImm_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Imm_instrContext* fs_grammarParser::imm_instr() {
  Imm_instrContext *_localctx = _tracker.createInstance<Imm_instrContext>(_ctx, getState());
  enterRule(_localctx, 10, fs_grammarParser::RuleImm_instr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    imm_opcode();
    setState(95);
    destination();
    setState(96);
    match(fs_grammarParser::T__0);
    setState(97);
    immediate();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Load_instrContext ------------------------------------------------------------------

fs_grammarParser::Load_instrContext::Load_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::DestinationContext* fs_grammarParser::Load_instrContext::destination() {
  return getRuleContext<fs_grammarParser::DestinationContext>(0);
}

tree::TerminalNode* fs_grammarParser::Load_instrContext::FloatingPointLiteral() {
  return getToken(fs_grammarParser::FloatingPointLiteral, 0);
}


size_t fs_grammarParser::Load_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleLoad_instr;
}

void fs_grammarParser::Load_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoad_instr(this);
}

void fs_grammarParser::Load_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoad_instr(this);
}


antlrcpp::Any fs_grammarParser::Load_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitLoad_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Load_instrContext* fs_grammarParser::load_instr() {
  Load_instrContext *_localctx = _tracker.createInstance<Load_instrContext>(_ctx, getState());
  enterRule(_localctx, 12, fs_grammarParser::RuleLoad_instr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(fs_grammarParser::T__1);
    setState(100);
    destination();
    setState(101);
    match(fs_grammarParser::T__0);
    setState(102);
    match(fs_grammarParser::FloatingPointLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Branch_instrContext ------------------------------------------------------------------

fs_grammarParser::Branch_instrContext::Branch_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Branch_opcodeContext* fs_grammarParser::Branch_instrContext::branch_opcode() {
  return getRuleContext<fs_grammarParser::Branch_opcodeContext>(0);
}

std::vector<fs_grammarParser::OperandContext *> fs_grammarParser::Branch_instrContext::operand() {
  return getRuleContexts<fs_grammarParser::OperandContext>();
}

fs_grammarParser::OperandContext* fs_grammarParser::Branch_instrContext::operand(size_t i) {
  return getRuleContext<fs_grammarParser::OperandContext>(i);
}


size_t fs_grammarParser::Branch_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleBranch_instr;
}

void fs_grammarParser::Branch_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBranch_instr(this);
}

void fs_grammarParser::Branch_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBranch_instr(this);
}


antlrcpp::Any fs_grammarParser::Branch_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitBranch_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Branch_instrContext* fs_grammarParser::branch_instr() {
  Branch_instrContext *_localctx = _tracker.createInstance<Branch_instrContext>(_ctx, getState());
  enterRule(_localctx, 14, fs_grammarParser::RuleBranch_instr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    branch_opcode();
    setState(105);
    operand();
    setState(106);
    match(fs_grammarParser::T__0);
    setState(107);
    operand();
    setState(108);
    match(fs_grammarParser::T__0);
    setState(109);
    operand();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Conv_instrContext ------------------------------------------------------------------

fs_grammarParser::Conv_instrContext::Conv_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Conv_opcodeContext* fs_grammarParser::Conv_instrContext::conv_opcode() {
  return getRuleContext<fs_grammarParser::Conv_opcodeContext>(0);
}

std::vector<fs_grammarParser::OperandContext *> fs_grammarParser::Conv_instrContext::operand() {
  return getRuleContexts<fs_grammarParser::OperandContext>();
}

fs_grammarParser::OperandContext* fs_grammarParser::Conv_instrContext::operand(size_t i) {
  return getRuleContext<fs_grammarParser::OperandContext>(i);
}


size_t fs_grammarParser::Conv_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleConv_instr;
}

void fs_grammarParser::Conv_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConv_instr(this);
}

void fs_grammarParser::Conv_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConv_instr(this);
}


antlrcpp::Any fs_grammarParser::Conv_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitConv_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Conv_instrContext* fs_grammarParser::conv_instr() {
  Conv_instrContext *_localctx = _tracker.createInstance<Conv_instrContext>(_ctx, getState());
  enterRule(_localctx, 16, fs_grammarParser::RuleConv_instr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    conv_opcode();
    setState(112);
    operand();
    setState(113);
    match(fs_grammarParser::T__0);
    setState(114);
    operand();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Indep_instrContext ------------------------------------------------------------------

fs_grammarParser::Indep_instrContext::Indep_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fs_grammarParser::Indep_instrContext::getRuleIndex() const {
  return fs_grammarParser::RuleIndep_instr;
}

void fs_grammarParser::Indep_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIndep_instr(this);
}

void fs_grammarParser::Indep_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fs_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIndep_instr(this);
}


antlrcpp::Any fs_grammarParser::Indep_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fs_grammarVisitor*>(visitor))
    return parserVisitor->visitIndep_instr(this);
  else
    return visitor->visitChildren(this);
}

fs_grammarParser::Indep_instrContext* fs_grammarParser::indep_instr() {
  Indep_instrContext *_localctx = _tracker.createInstance<Indep_instrContext>(_ctx, getState());
  enterRule(_localctx, 18, fs_grammarParser::RuleIndep_instr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _la = _input->LA(1);
    if (!(_la == fs_grammarParser::T__2

    || _la == fs_grammarParser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pseudo_instrContext ------------------------------------------------------------------

fs_grammarParser::Pseudo_instrContext::Pseudo_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fs_grammarParser::Pseudo_opcodeContext* fs_grammarParser::Pseudo_instrContext::pseudo_opcode() {
  return getRuleContext<fs_grammarParser::Pseudo_opcodeContext>(0);
}

std::vector<tree::TerminalNode *> fs_grammarParser::Pseudo_instrContext::Identifier() {
  return getTokens(fs_grammarParser::Identifier);
}

tree::TerminalNode* fs_grammarParser::Pseudo_instrContext::Identifier(size_t i) {
  return getToken(fs_grammarParser::Identifier, i);
}


size_t fs_grammarParser::Pseudo_instrContext::getRuleIndex() const {
  return fs_grammarParser::RulePseudo_instr;
}
